<resources>
    <string name="app_name">Points</string>
    <string name="new_game_header">New Game</string>
    <string name="stats_header">Statistics</string>
    <string name="exit_header">Exit</string>
    <string name="preferences" translatable="false">POINTS_SHARED_PREFERENCES</string>

    <string name="pregame_dialog_title">Pregame Settings</string>
    <string name="pregame_dialog_message">Please, set up some settings before game starts.</string>
    <string name="pregame_dialog_field_side">Size of battlefield side</string>
    <string name="pregame_dialog_current_size">Current size</string>
    <string name="low_bound_side_size" translatable="false">5</string>
    <string name="high_bound_side_size" translatable="false">15</string>
    <string name="zero" translatable="false">0</string>
    <string name="pregame_dialog_notice">Notice: color of battlefield border will indicate current turn.</string>
    <string name="pregame_dialog_start">Start!</string>

    <string name="postgame_dialog_title">Game Over</string>
    <string name="postgame_dialog_score">Score</string>
    <string name="postgame_dialog_red">Red</string>
    <string name="postgame_dialog_blue">Blue</string>
    <string name="postgame_dialog_winner">Winner</string>
    <string name="postgame_dialog_captures">Point Captures</string>
    <string name="postgame_dialog_red_points_captured">By blue</string>
    <string name="postgame_dialog_blue_points_captured">By red</string>
    <string name="postgame_dialog_field_coverage">Coverage</string>
    <string name="postgame_dialog_free">Free</string>
    <string name="postgame_dialog_finish">Exit battle</string>
    <string name="postgame_dialog_stay">Watch field</string>

    <string name="total_games_played_title">Total games played</string>
    <string name="red_wins_title">Red wins</string>
    <string name="blue_wins_title">Blue wins</string>
    <string name="draws_title">Draws</string>
    <string name="red_captured_title">Red points captured</string>
    <string name="blue_captured_title">Blue points captured</string>
    <string name="max_score_title">Max score</string>
    <string name="max_captured_per_game_title">Max captured per game by one player</string>

    <string name="exit_dialog_message">Are you sure to exit?</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="percent_sign" translatable="false">%</string>
</resources>
