<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:id="@+id/message"
            android:text="@string/pregame_dialog_message"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_gravity="center"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/pregame_dialog_field_side"
            android:textColor="#000"
            android:textSize="14sp"
            android:layout_gravity="center"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/low_bound_side_size"
        />
        <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/field_size_slider"
                android:layout_weight="80"
                android:progress="0"
                android:max="2"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/high_bound_side_size"
        />
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregame_dialog_current_size"
            android:textSize="18sp"
            android:textAlignment="center"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pregame_dialog_current_size_text"
            android:text="@string/low_bound_side_size"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregame_dialog_notice"
            android:textSize="14sp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
    />
</LinearLayout>
