<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/transparent"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/total_games_played_title"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAlignment="center"
        />
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/total_games_played"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="sans-serif"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/red_wins_title"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAlignment="center"
        />
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/red_wins"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="#f00"
                android:textStyle="bold"
                android:textAlignment="center"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/blue_wins_title"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAlignment="center"
        />
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/blue_wins"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="#00f"
                android:textStyle="bold"
                android:textAlignment="center"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/draws_title"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAlignment="center"
        />
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/draw"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/red_captured_title"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAlignment="center"
        />
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/red_captured"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/blue_captured_title"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAlignment="center"
        />
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/blue_captured"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/max_score_title"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAlignment="center"
        />
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/max_score"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/max_captured_per_game_title"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAlignment="center"
        />
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/max_captured"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
        />
    </LinearLayout>
</LinearLayout>