<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/postgame_dialog_title"
            android:textSize="24sp"
            android:textColor="#000"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/postgame_dialog_score"
            android:textSize="20sp"
            android:textColor="#000"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:baselineAligned="false"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/red_cup_place"
                    android:src="@drawable/empty_cup_30"
                    android:contentDescription="@string/postgame_dialog_red"
            />
        </LinearLayout>
        <LinearLayout
                android:baselineAligned="false"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/blue_cup_place"
                    android:src="@drawable/empty_cup_30"
                    android:contentDescription="@string/postgame_dialog_blue"
            />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/postgame_dialog_red"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#f00"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/postgame_dialog_blue"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#00f"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/red_score"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#f00"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/blue_score"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#00f"
        />
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postgame_dialog_captures"
            android:textSize="20sp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/postgame_dialog_blue_points_captured"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#f00"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/postgame_dialog_red_points_captured"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#00f"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/red_captures"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#f00"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/blue_captures"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#00f"
        />
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postgame_dialog_field_coverage"
            android:textSize="20sp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/postgame_dialog_red"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#f00"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/postgame_dialog_free"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/postgame_dialog_blue"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#00f"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/red_coverage"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#f00"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/free_coverage"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/blue_coverage"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#00f"
        />
    </LinearLayout>
</LinearLayout>
